<resources>
    <string name="app_name">MyTbt</string>


    <!-- Generic -->
    <string name="genericOk">OK</string>
    <string name="genericCancel">Cancel</string>
    <string name="genericLoading">Loading…</string>

    <!-- Permission Manager -->
    <string name="permissionPromptTitle">Permissions Required</string>
    <string name="permissionPromptMainText">This App requires the following permissions:</string>
    <string name="permissionPromptInternet">- Internet access to request routes</string>
    <string name="permissionPromptReadWrite">- Read files to read the map files</string>
    <string name="permissionPromptLocation">- Access location for navigation</string>

    <!-- Prompts -->
    <string name="promptNoMapFilesTitle">Map files not found</string>
    <string name="promptNoMapFilesText">We didn\'t find any map files in your device.\nPlease make sure your map files are located in </string>
    <string name="promptInvalidMapFilesTitle">Invalid map files</string>
    <string name="promptInvalidMapFilesText">The map was unable to load. Please make sure you have all the required map files in </string>
    <string name="promptMultipleMapFilesTitle">Select the map to load</string>
    <string name="promptLoadingMap">Loading Map…</string>
    <string name="promptNoGpsTitle">GPS Not Found</string>
    <string name="promptNoGpsText">You device\'s location service is deactivated.\nPlease turn it on in order to use the navigation.</string>
    <string name="waitingGpsTitle">Looking for GPS signal</string>
    <string name="promptDriveTitle">Driving</string>
    <string name="promptDriveText">Choose an option</string>
    <string name="promptDriveDriveHere">Drive here</string>
    <string name="promptDriveSearch">Search for a destination</string>
    <string name="promptDriveCancel">Cancel current route</string>
    <string name="promptDriveSettings">View settings</string>

    <!-- Route Details -->
    <string name="route_details_title">Route Details</string>
    <string name="route_details_destination">Destination:</string>
    <string name="route_details_no_path">No route</string>
    <string name="route_details_start">Start</string>
    <string name="route_details_start_suffix">from</string>

    <!-- Navigation bar -->
    <string name="navbar_distance_prefix">In</string>
    <string name="navbar_distance_suffix_meters">m</string>
    <string name="navbar_distance_suffix_kilometers">km</string>

    <!-- Voice Navigation -->
    <string name="voice_error_new_route">Unable to calculate route</string>
    <string name="voice_error_updating_route">Unable to adjust your route</string>
    <string name="voice_distance_prefix">In about</string>
    <string name="voice_distance_metric_meters">meters</string>
    <string name="voice_distance_metric_single_kilometer">kilometer</string>
    <string name="voice_distance_metric_kilometers">kilometers</string>
    <string name="voice_distance_metric_and_a_half">and a half</string>
    <string name="voice_start">Begin your trip</string>
    <string name="voice_start_destination_prefix">to</string>
    <string name="voice_readjusted">your route has been readjusted</string>
    <string name="voice_continue">keep going foreword</string>
    <string name="voice_destination_distant">you will arrive at your destination</string>
    <string name="voice_destination_immediate">you arrived at your destination</string>
    <string name="voice_keep_left">keep left</string>
    <string name="voice_keep_right">keep right</string>
    <string name="voice_leave_roundabout">exit the roundabout</string>
    <string name="voice_enter_roundabout">at the roundabout</string>
    <string name="voice_enter_roundabout_with_exit">take the</string>
    <string name="voice_enter_roundabout_exit_suffix">th exit</string> <!-- As in 4th or 5th exit-->
    <string name="voice_turn_back">turn back</string>
    <string name="voice_turn_left">turn left</string>
    <string name="voice_turn_right">turn right</string>
    <string name="voice_turn_slight_left">turn left</string>
    <string name="voice_turn_slight_right">turn right</string>
    <string name="voice_turn_sharp_left">turn left</string>
    <string name="voice_turn_sharp_right">turn right</string>
    <string name="voice_exit_ramp_right">take the exit to your right</string>
    <string name="voice_exit_ramp_left">take the exit to your left</string>
    <string name="voice_enter_ramp_right">take the ramp to your right</string>
    <string name="voice_enter_ramp_left">take the ramp to your left</string>
    <string name="voice_u_turn">make a u turn</string>
    <string name="voice_road_name_change_immediate">you entered</string>
    <string name="voice_road_name_change_distant">you will enter</string>
    <string name="voice_reached_destination">You arrived at your destination</string>

</resources>
